add floatingButton to MapActivity and navigate to ArtefactActivity by click

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
         </activity>
+
+        <activity android:name=".artefact.ArtefactActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
