--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation group: 'com.backendless', name: 'backendless', version: '5.2.4'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation 'com.android.support:design:28.0.0'
 }
