--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation "com.google.android.gms:play-services-location:15.0.1"
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
